--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@color/background_color"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginHorizontal="@dimen/title_margin_horizontal"
+        android:layout_marginTop="@dimen/title_margin_top"
+        android:layout_marginBottom="48dp"
+        android:text="@string/main_title"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_search"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginVertical="@dimen/main_button_margin_vertical"
+        android:layout_marginStart="@dimen/main_button_margin_start"
+        android:layout_marginEnd="@dimen/main_button_margin_end"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_corners_button"
+        android:text="@string/main_button_search"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size"
+        app:backgroundTint="@color/white"
+        app:icon="@drawable/search"
+        app:iconGravity="textStart"
+        app:iconPadding="@dimen/button_icon_padding"
+        app:iconTint="@color/black" />
+
+    <Button
+        android:id="@+id/btn_media"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginVertical="@dimen/main_button_margin_vertical"
+        android:layout_marginStart="@dimen/main_button_margin_start"
+        android:layout_marginEnd="@dimen/main_button_margin_end"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_corners_button"
+        android:text="@string/main_button_media"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size"
+        app:backgroundTint="@color/white"
+        app:icon="@drawable/media"
+        app:iconGravity="textStart"
+        app:iconPadding="@dimen/button_icon_padding"
+        app:iconTint="@color/black" />
+
+    <Button
+        android:id="@+id/btn_settings"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginVertical="@dimen/main_button_margin_vertical"
+        android:layout_marginStart="@dimen/main_button_margin_start"
+        android:layout_marginEnd="@dimen/main_button_margin_end"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_corners_button"
+        android:text="@string/main_button_settings"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size"
+        app:backgroundTint="@color/white"
+        app:icon="@drawable/settings"
+        app:iconGravity="textStart"
+        app:iconPadding="@dimen/button_icon_padding"
+        app:iconTint="@color/black" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="24dp" />
+
+</LinearLayout>
