--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background_color">#3772E7</color>
+    <color name="ic_color_inactive">#AEAFB4</color>
+    <color name="ic_color_active">#1A1B22</color>
 </resources>
