--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,62 +13,27 @@
         android:layout_marginHorizontal="@dimen/title_margin_horizontal"
         android:layout_marginTop="@dimen/title_margin_top"
         android:layout_marginBottom="48dp"
+        android:fontFamily="@font/ys_display_medium"
         android:text="@string/main_title"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size" />
 
     <Button
         android:id="@+id/btn_search"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginVertical="@dimen/main_button_margin_vertical"
-        android:layout_marginStart="@dimen/main_button_margin_start"
-        android:layout_marginEnd="@dimen/main_button_margin_end"
-        android:layout_weight="1"
-        android:background="@drawable/rounded_corners_button"
+        style="@style/MainActivityButtonStyle"
         android:text="@string/main_button_search"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size"
-        app:backgroundTint="@color/white"
-        app:icon="@drawable/search"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/button_icon_padding"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/search" />
 
     <Button
         android:id="@+id/btn_media"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginVertical="@dimen/main_button_margin_vertical"
-        android:layout_marginStart="@dimen/main_button_margin_start"
-        android:layout_marginEnd="@dimen/main_button_margin_end"
-        android:layout_weight="1"
-        android:background="@drawable/rounded_corners_button"
+        style="@style/MainActivityButtonStyle"
         android:text="@string/main_button_media"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size"
-        app:backgroundTint="@color/white"
-        app:icon="@drawable/media"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/button_icon_padding"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/media" />
 
     <Button
         android:id="@+id/btn_settings"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginVertical="@dimen/main_button_margin_vertical"
-        android:layout_marginStart="@dimen/main_button_margin_start"
-        android:layout_marginEnd="@dimen/main_button_margin_end"
-        android:layout_weight="1"
-        android:background="@drawable/rounded_corners_button"
+        style="@style/MainActivityButtonStyle"
         android:text="@string/main_button_settings"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size"
-        app:backgroundTint="@color/white"
-        app:icon="@drawable/settings"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/button_icon_padding"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/settings" />
 
 </LinearLayout>
