--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_color_inactive">#AEAFB4</color>
-    <color name="ic_color_active">#1A1B22</color>
+    <color name="ic_color_inactive">@color/white</color>
+    <color name="ic_color_active">@color/white</color>
+    <color name="text_color">@color/white</color>
+    <color name="primary">#1A1B22</color>
 </resources>
