--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="MainActivityButtonStyle">
+    <style name="MainActivityButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_marginStart">@dimen/main_button_margin_start</item>
         <item name="android:layout_marginEnd">@dimen/main_button_margin_end</item>
         <item name="android:layout_weight">1</item>
