--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
 <resources>
 
-    <style name="MainActivityButtonStyle">
+    <style name="MainActivityButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_marginStart">@dimen/main_button_margin_start</item>
         <item name="android:layout_marginEnd">@dimen/main_button_margin_end</item>
         <item name="android:layout_weight">1</item>
@@ -16,6 +16,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
+
     </style>
 
     <style name="SettingsActivityTextViewStyle">
