--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -25,6 +25,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_dark_theme"
             style="@style/SettingsActivityTextViewStyle"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -32,6 +33,7 @@
             android:text="@string/settings_dark_theme" />
 
         <Switch
+            android:id="@+id/sw_dark_theme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -42,16 +44,19 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_share"
         style="@style/SettingsActivityTextViewStyle"
         android:text="@string/settings_share_app"
         app:drawableEndCompat="@drawable/share" />
 
     <TextView
+        android:id="@+id/tv_support"
         style="@style/SettingsActivityTextViewStyle"
         android:text="@string/settings_write_support"
         app:drawableEndCompat="@drawable/support" />
 
     <TextView
+        android:id="@+id/tv_user_agreement"
         style="@style/SettingsActivityTextViewStyle"
         android:text="@string/settings_user_agreement"
         app:drawableEndCompat="@drawable/arrow_forward" />
