--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,12 @@
         android:layout_marginBottom="48dp"
         android:fontFamily="@font/ys_display_medium"
         android:text="@string/main_title"
-        android:textColor="@color/white"
+        android:textColor="@color/yp_white"
         android:textSize="@dimen/text_size" />
 
     <Button
         android:id="@+id/btn_search"
         style="@style/MainActivityButtonStyle"
-
         android:text="@string/main_button_search"
         app:icon="@drawable/search" />
 
