--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,16 @@
     <color name="ic_color_active">#1A1B22</color>
 
     <color name="text_color">@color/black</color>
+    <color name="edit_text_background">#E6E8EB</color>
+    <color name="edit_text_icon_color">#AEAFB4</color>
 
+    <color name="yp_black">#1A1B22</color>
+    <color name="yp_white">#FFFFFF</color>
+    <color name="yp_text_gray">#AEAFB4</color>
+    <color name="yp_light_gray">#E6E8EB</color>
+    <color name="yp_red">#F56B6C</color>
+    <color name="yp_blue">#3772E7</color>
+    <color name="yp_background">#801A1B22</color>
 
 
 </resources>
