--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,14 +9,13 @@
         <item name="android:background">@drawable/rounded_corners_button</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/text_size</item>
+        <item name="android:drawableTint">@color/yp_black</item>
         <item name="backgroundTint">@color/white</item>
         <item name="iconGravity">textStart</item>
         <item name="iconPadding">@dimen/button_icon_padding</item>
         <item name="iconTint">@color/black</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
-        <item name="android:fontFamily">@font/ys_display_medium</item>
-
     </style>
 
     <style name="SettingsActivityTextViewStyle">
