--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -13,7 +13,7 @@
         android:drawablePadding="28dp"
         android:paddingHorizontal="20dp"
         android:paddingVertical="12dp"
-        android:text="Поиск"
+        android:text="@string/title_tv_search"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="28sp"
         app:drawableStartCompat="@drawable/arrow_back" />
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/edit_text_background"
-            android:hint="Поиск"
+            android:hint="@string/et_search_hint"
             android:paddingTop="12dp"
             android:textColor="@color/yp_black"
             android:textSize="16sp" />
