--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
     tools:context=".SearchActivity">
 
@@ -19,6 +22,7 @@
         app:drawableStartCompat="@drawable/arrow_back" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -27,18 +31,21 @@
         app:boxCornerRadiusBottomStart="8dp"
         app:boxCornerRadiusTopEnd="8dp"
         app:boxCornerRadiusTopStart="8dp"
+        app:endIconDrawable="@drawable/ic_clear"
         app:endIconMode="clear_text"
         app:hintEnabled="false"
         app:hintTextColor="@color/edit_text_icon_color"
         app:startIconContentDescription="Поиск"
         app:startIconDrawable="@drawable/search">
 
-        <androidx.appcompat.widget.AppCompatEditText
+        <EditText
             android:id="@+id/et_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/edit_text_background"
             android:hint="@string/et_search_hint"
+            android:inputType="text"
+            android:maxLines="1"
             android:paddingTop="12dp"
             android:textColor="@color/yp_black"
             android:textSize="16sp" />
