Работа с Retrofit & RecyclerView

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,7 +8,7 @@
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
-    tools:context=".SearchActivity">
+    tools:context=".ui.SearchActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -46,9 +46,11 @@
             android:autofillHints=""
             android:backgroundTint="@color/edit_text_background"
             android:hint="@string/et_search_hint"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
             android:paddingTop="12dp"
+            android:singleLine="true"
             android:textColor="@color/yp_black"
             android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
