--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="ic_color_inactive">@color/white</color>
     <color name="ic_color_active">@color/white</color>
-    <color name="text_color_black_white">@color/white</color>
+    <color name="color_yp_black_white">@color/white</color>
     <color name="primary">#1A1B22</color>
     <color name="gray_white">@color/yp_white</color>
     <color name="edit_text_background">@color/white</color>
