--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -58,16 +58,70 @@
     <LinearLayout
         android:id="@+id/ll_update"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="top"
         android:orientation="vertical"
         android:visibility="gone">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp"
+            android:contentDescription="@string/search_img_update_descr"
+            android:src="@drawable/ic_network_error" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:text="@string/search_tv_update"
+            android:textAlignment="center"
+            android:textColor="@color/color_yp_black_white" />
+
         <Button
             android:id="@+id/btn_update"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/search_button_update" />
+            android:layout_marginTop="4dp"
+            android:backgroundTint="@color/color_yp_black_white"
+            android:text="@string/search_btn_update_text"
+            android:textColor="@color/color_yp_white_black"
+            app:cornerRadius="54dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_nothing_found"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="top"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp"
+            android:contentDescription="@string/search_img_notfound_descr"
+            android:src="@drawable/ic_not_found" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="24dp"
+            android:gravity="center"
+            android:text="@string/search_tv_notfound_text"
+            android:textColor="@color/color_yp_black_white"
+            android:textSize="19sp" />
 
     </LinearLayout>
 
@@ -75,7 +129,8 @@
         android:id="@+id/searchRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
 
 </LinearLayout>
