--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,29 +19,14 @@
         android:textSize="22sp"
         app:drawableStartCompat="@drawable/arrow_back" />
 
-    <LinearLayout
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/themeSwitcher"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_dark_theme"
-            style="@style/SettingsActivityTextViewStyle"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:paddingVertical="@dimen/settings_item_padding_vertical"
-            android:text="@string/settings_dark_theme" />
-
-        <Switch
-            android:id="@+id/sw_dark_theme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="8dp"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-    </LinearLayout>
+        android:layout_gravity="start"
+        android:layout_marginHorizontal="@dimen/settings_item_margin_horizontal"
+        android:text="@string/settings_dark_theme" />
 
     <TextView
         android:id="@+id/tv_share"
