--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -71,7 +71,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginVertical="20dp"
             android:gravity="center"
-            android:text="Вы искали"
+            android:text="@string/search_tv_history"
             android:textAlignment="center"
             android:textColor="@color/color_yp_black_white"
             android:textSize="19sp" />
@@ -79,8 +79,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/historyRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         <Button
