--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -27,4 +27,13 @@
         <item name="android:fontFamily">@font/ys_display_regular</item>
 
     </style>
+
+    <style name="PlayerBottomRightText">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/color_yp_black_white</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+    </style>
 </resources>
