--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:backgroundTint="@color/color_yp_white_black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -81,7 +82,6 @@
         android:id="@+id/player_favorites_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:src="@drawable/ic_add_favorites"
         app:layout_constraintBottom_toTopOf="@id/label_duration"
         app:layout_constraintStart_toStartOf="@id/left_guideline"
