--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
 
     <color name="color_yp_black_white">@color/yp_black</color>
     <color name="color_yp_white_black">@color/yp_white</color>
+    <color name="color_yp_shades_of_grey">#40FFFFFF</color>
     <color name="gray_white">@color/yp_text_gray</color>
     <color name="edit_text_background">#E6E8EB</color>
     <color name="edit_text_icon_color">#AEAFB4</color>
