--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -35,6 +35,7 @@
         app:layout_constraintGuide_end="20dp" />
 
     <ImageView
+        android:id="@+id/iv_player_arrow_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="Arrow back"
