Добавлено закрытие экрана поиска

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -11,6 +11,7 @@
     tools:context=".ui.SearchActivity">
 
     <TextView
+        android:id="@+id/tv_search_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawablePadding="28dp"
