--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,18 +6,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_margin="@dimen/back_margin"
-        android:layout_marginBottom="30dp"
-        android:drawablePadding="28dp"
-        android:fontFamily="@font/ys_display_medium"
-        android:text="@string/settings_title"
-        android:textColor="?attr/colorOnPrimary"
-        android:textSize="22sp"
-        app:drawableStartCompat="@drawable/arrow_back" />
+        android:gravity="start"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_settings_arrow_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="28dp"
+            android:src="@drawable/arrow_back" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/ys_display_medium"
+            android:text="@string/settings_title"
+            android:textColor="?attr/colorOnPrimary"
+            android:textSize="22sp" />
+    </LinearLayout>
 
 
     <com.google.android.material.switchmaterial.SwitchMaterial
